ibuilder/tests/not_compile/invalid_field_type.stderr
error: unsupported field type
 --> $DIR/invalid_field_type.rs:6:10
  |
6 |     ups: &'static str,
  |          ^^^^^^^^^^^^

error[E0599]: no function or associated item named `builder` found for struct `Foo` in the current scope
  --> $DIR/invalid_field_type.rs:10:10
   |
4  | struct Foo {
   | ---------- function or associated item `builder` not found for this
...
10 |     Foo::builder();
   |          ^^^^^^^ function or associated item not found in `Foo`
